--- a/roles/lidarr/tasks/main.yml
+++ b/roles/lidarr/tasks/main.yml
@@ -21,12 +21,9 @@
     group: "{{ guid }}"
     mode: "0755"
 
-- name: Create a docker network
-  community.docker.docker_network:
-    name: arr_network
-    connected:
-      - "{{ swag_container_name }}"
-    appends: true
+- name: Create docker network
+  ansible.builtin.include_tasks:
+    file: network.yml
 
 - name: Make sure that Lidarr container is created and running
   docker_container:
@@ -34,7 +31,7 @@
     image: ghcr.io/linuxserver/lidarr
     pull: true
     networks:
-      - name: arr_network
+      - name: "{{ lidarr_network_name }}"
     state: started
     env:
       PUID: "{{ guid }}"
