--- a/roles/nextcloud/defaults/main.yml
+++ b/roles/nextcloud/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 nextcloud_container_name: nextcloud
+nextcloud_network_name: nextcloud_network
 nextcloud_subdomain: nextcloud
 nextcloud_dashboard_url: "https://{{ nextcloud_subdomain }}.{{ site_url }}"
 nextcloud_mysql_host: nextcloud-mariadb
