--- a/roles/vaultwarden/defaults/main.yml
+++ b/roles/vaultwarden/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 vaultwarden_container_name: vaultwarden
+vaultwarden_network_name: vaultwarden_network
 vaultwarden_subdomain: vault
 vaultwarden_dashboard_url: https://{{ vaultwarden_subdomain }}.{{ site_url }}
 vaultwarden_dashboard_name: Vaultwarden
