--- a/roles/deluge/defaults/main.yml
+++ b/roles/deluge/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 deluge_container_name: deluge
+deluge_network_name: arr_network
 deluge_subdomain: deluge
 deluge_dashboard_url: https://{{ deluge_subdomain }}.{{ site_url }}
 deluge_dashboard_name: Deluge
