--- a/roles/handbrake/tasks/main.yml
+++ b/roles/handbrake/tasks/main.yml
@@ -7,13 +7,17 @@
     group: "{{ guid }}"
     mode: "0755"
 
+- name: Create docker network
+  ansible.builtin.include_tasks:
+    file: network.yml
+
 - name: Make sure that HandBrake container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ handbrake_container_name }}"
     image: jlesage/handbrake:latest
     pull: true
     networks:
-      - name: swag_network
+      - name: "{{ handbrake_network_name }}"
     state: started
     env:
       USER_ID: "{{ guid }}"
