--- a/roles/healthchecks/tasks/main.yml
+++ b/roles/healthchecks/tasks/main.yml
@@ -7,13 +7,17 @@
     group: "{{ guid }}"
     mode: "0750"
 
+- name: Create docker network
+  ansible.builtin.include_tasks:
+    file: network.yml
+
 - name: Make sure that Healthchecks container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ healthchecks_container_name }}"
     image: lscr.io/linuxserver/healthchecks:latest
     pull: true
     networks:
-      - name: swag_network
+      - name: "{{ healthchecks_network_name }}"
     state: started
     env:
       PUID: "{{ guid }}"
