--- a/roles/lidarr/defaults/main.yml
+++ b/roles/lidarr/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 lidarr_container_name: lidarr
+lidarr_network_name: arr_network
 lidarr_subdomain: lidarr
 lidarr_dashboard_url: https://{{ lidarr_subdomain }}.{{ site_url }}
 lidarr_dashboard_name: Lidarr
