--- a/roles/navidrome/defaults/main.yml
+++ b/roles/navidrome/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 navidrome_container_name: navidrome
+navidrome_network_name: navidrome_network
 navidrome_subdomain: navidrome
 navidrome_dashboard_url: https://{{ navidrome_subdomain }}.{{ site_url }}
 navidrome_dashboard_name: Navidrome
