--- a/roles/navidrome/tasks/main.yml
+++ b/roles/navidrome/tasks/main.yml
@@ -7,13 +7,17 @@
     group: "{{ username }}"
     mode: "0755"
 
+- name: Create docker network
+  ansible.builtin.include_tasks:
+    file: network.yml
+
 - name: Make sure that Navidrome container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ navidrome_container_name }}"
     image: deluan/navidrome:latest
     pull: true
     networks:
-      - name: swag_network
+      - name: "{{ navidrome_network_name }}"
     state: started
     user: "{{ guid }}:{{ guid }}"
     env:
