--- a/roles/stirling_pdf/tasks/main.yml
+++ b/roles/stirling_pdf/tasks/main.yml
@@ -7,13 +7,17 @@
     group: "{{ guid }}"
     mode: "0755"
 
+- name: Create docker network
+  ansible.builtin.include_tasks:
+    file: network.yml
+
 - name: Make sure that Stirling PDF container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ stirling_pdf_container_name }}"
     image: frooodle/s-pdf:latest-ultra-lite
     pull: true
     networks:
-      - name: swag_network
+      - name: "{{ stirling_pdf_network_name }}"
     state: started
     env:
       DOCKER_ENABLE_SECURITY: "true"
