--- a/roles/deluge/tasks/main.yml
+++ b/roles/deluge/tasks/main.yml
@@ -26,7 +26,7 @@
 - name: Make sure that Deluge container is created and running
   docker_container:
     name: "{{ deluge_container_name }}"
-    image: binhex/arch-delugevpn:2.1.1-6-05
+    image: binhex/arch-delugevpn:2.1.1-8-03
     pull: true
     networks:
       - name: "{{ deluge_network_name }}"
@@ -44,6 +44,7 @@
       VPN_CLIENT: wireguard
       STRICT_PORT_FORWARD: "no"
       ENABLE_PRIVOXY: "yes"
+      ENABLE_SOCKS: "yes"
       LAN_NETWORK: 172.18.0.0/16,{{ lan_network }}
       NAME_SERVERS: 9.9.9.9,149.112.112.112
       DELUGE_DAEMON_LOG_LEVEL: info
