--- a/roles/seafile/tasks/main.yml
+++ b/roles/seafile/tasks/main.yml
@@ -9,6 +9,7 @@
   loop:
     - "db-data"
     - "seafile-data"
+    - "seahub-data"
     - "seadoc-data"
     - "notification-data"
 
@@ -21,7 +22,7 @@
     mode: "0644"
   loop:
     - ["compose.yml.j2", "seafile-server.yml"]
-    - [".env.j2", ".env"]
+#    - [".env.j2", ".env"]
 
 
 - name: Create docker network
@@ -38,29 +39,28 @@
   ansible.builtin.pause:
     seconds: 20
 
-- name: Fix CSRF
-  become: true
-  ansible.builtin.lineinfile:
-    path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/seahub_settings.py"
-    search_string: "CSRF_TRUSTED_ORIGINS = "
-    line: "CSRF_TRUSTED_ORIGINS = ['{{ seafile_dashboard_url }}']"
+# - name: Fix CSRF
+#  become: true
+#  ansible.builtin.lineinfile:
+#    path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/seahub_settings.py"
+#    search_string: "CSRF_TRUSTED_ORIGINS = "
+#    line: "CSRF_TRUSTED_ORIGINS = ['{{ seafile_dashboard_url }}']"
 
-- name: Allow connections from 0.0.0.0
-  become: true
-  ansible.builtin.lineinfile:
-    path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/gunicorn.conf.py"
-    search_string: "bind = "
-    line: "bind = '0.0.0.0:8000'"
+# - name: Allow connections from 0.0.0.0
+#  become: true
+#  ansible.builtin.lineinfile:
+#    path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/gunicorn.conf.py"
+#    search_string: "bind = "
+#    line: "bind = '0.0.0.0:8000'"
 
 - name: Install OnlyOffice for document integration
   when: '"onlyoffice" in containers'
   block:
-    - name: Set OnlyOffice to run on the same network of Seafile
-      ansible.builtin.set_fact:
-        onlyoffice_network_name: "{{ seafile_network_name }}"
     - name: Include OnlyOffice role
       ansible.builtin.include_role:
         name: onlyoffice
+      vars:
+        onlyoffice_network_name: "{{ seafile_network_name }}"
     - name: Edit Seahub configuration for OnlyOffice
       ansible.builtin.lineinfile:
         path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/seahub_settings.py"
@@ -70,6 +70,7 @@
         - ["ENABLE_ONLYOFFICE", "True"]
         - ["ONLYOFFICE_APIJS_URL", "'http://onlyoffice/web-apps/apps/api/documents/api.js'"]
         - ["ONLYOFFICE_FILE_EXTENSION", "('doc', 'docx', 'ppt', 'pptx', 'xls', 'xlsx', 'odt', 'fodt', 'odp', 'fodp', 'ods', 'fods', 'csv', 'ppsx', 'pps')"]
+        - ["ONLYOFFICE_EDIT_FILE_EXTENSION", "('docx', 'pptx', 'xlsx')"]
         - ["ONLYOFFICE_JWT_SECRET", "'{{ onlyoffice_jwt_secret }}'"]
 
 - name: Restart Seafile container to apply above changes
