--- a/host_vars/catafalco/vars.yml
+++ b/host_vars/catafalco/vars.yml
@@ -17,7 +17,7 @@ guid: "1000"
 shell: /usr/bin/zsh
 
 # File systems, partitions and mounts
-docker_dir: /opt/docker/data
+docker_dir: /var/opt/docker
 boot_drive_serial: PBEEEBB21101806811 # Patriot Burst El
 
 # Hard disk
@@ -27,31 +27,29 @@ colorscheme: nord
 
 # Packages
 extra_packages:
-  - zsh
   - iperf3
   - speedtest-cli
   - htop
   - powertop
-  - stow
   - git
+  - lm-sensors
+  - mosquitto
   - neofetch
   - neovim
-  - tmux
-  - mosh
+  - nvme-cli
   - rsync
   - iotop
   - ncdu
-  - lm-sensors
-  - hddtemp
-  - nvme-cli
+  - python3-pip
   - reptyr
+  - stow
+  - tmux
+  - zsh
 
 #
 # Apt mirrors
 #
-version: focal
-
-apt_mirror: https://ubuntu.mirror.garr.it/ubuntu/
+version: bookworm
 
 #
 # Email credentials (for SMART and Snapraid error reporting)
@@ -100,6 +98,7 @@ enable_containers: true
 containers:
   - arm
   - calibreweb
+  - dawarich
   - deluge
   - duplicati
   - firefox
@@ -112,9 +111,12 @@ containers:
   - jellyfin
   - lidarr
   - navidrome
+  - onlyoffice
   - prowlarr
   - radarr
   - readarr
+  - seafile
+  - slskd
   - socket_proxy
   - sonarr
   - speedtest_tracker
@@ -146,6 +148,7 @@ cockpit_config:
 #
 # SMB
 #
+enable_samba: true
 samba_server_string: "{{ hostname }}"
 
 # --> Moved to hidden vars
@@ -221,16 +224,16 @@ samba_shares:
     valid_users: "@sambashare"
     write_list: "{{ username }} sara"
 
-  - name: Music
-    guest_ok: false
-    public: false
-    read_only: false
-    writable: true
-    browsable: true
-    owner: "{{ username }}"
-    path: "{{ mergerfs_root }}/Music"
-    valid_users: "@sambashare"
-    write_list: "{{ username }} sara"
+#  - name: Music
+#    guest_ok: false
+#    public: false
+#    read_only: false
+#    writable: true
+#    browsable: true
+#    owner: "{{ username }}"
+#    path: "{{ mergerfs_root }}/Music"
+#    valid_users: "@sambashare"
+#    write_list: "{{ username }} sara"
 
   - name: Media
     guest_ok: false
@@ -251,7 +254,7 @@ enable_mergerfs: true
 mergerfs_root: /mnt/storage
 cache_root: "{{ mergerfs_root }}_cache"
 
-disks:
+data_disks:
   - { path: /mnt/data1, src: /dev/disk/by-label/Data1, content: true }
   - { path: /mnt/data2, src: /dev/disk/by-label/Data2, content: true }
 #  - { path: /mnt/data3, src: /dev/disk/by-label/Data3, content: true }
@@ -266,7 +269,7 @@ parity_disks:
 # SnapRAID
 snapraid_force_install: true
 
-snapraid_data_disks: "{{ disks }}"
+snapraid_data_disks: "{{ data_disks }}"
 snapraid_parity_disks: "{{ parity_disks }}"
 
 snapraid_runner_email_sendon: error
@@ -277,12 +280,12 @@ snapraid_runner_email_address_to: "{{ snapraid_runner_email_address }}"
 snapraid_runner_smtp_host: "{{ email_smtp_host }}"
 snapraid_runner_smtp_port: "{{ email_smtp_port }}"
 
-snapraid_runner_healthcheck_io_uuid: 92955207-2df3-4978-a1c6-4dcde12190e1
-snapraid_healthcheck_io_host: https://healthchecks.{{ host_local }}
+snapraid_runner_healthchecks_io_uuid: 92955207-2df3-4978-a1c6-4dcde12190e1
+snapraid_healthchecks_io_host: https://healthchecks.{{ host_local }}
 
 snapraid_runner_command: >
-  python3 {{ snapraid_runner_bin }} -c {{ snapraid_runner_conf }} {% if snapraid_runner_healthcheck_io_uuid %}&& curl -fsS -m 10 --retry 5 -o /dev/null
-  {{ snapraid_healthcheck_io_host }}/ping/{{ snapraid_runner_healthcheck_io_uuid }}{% endif %}
+  python3 {{ snapraid_runner_bin }} -c {{ snapraid_runner_conf }} {% if snapraid_runner_healthchecks_io_uuid %}&& curl -fsS -m 10 --retry 5 -o /dev/null
+  {{ snapraid_healthchecks_io_host }}/ping/{{ snapraid_runner_healthchecks_io_uuid }}{% endif %}
 
 # Stop all the docker containers, backup the {{ docker_dir }} to the MergerFS pool, execute the SnapRAID runner and start the containers back up
 # Stopping the containers is necessary – backing up the data folder with the containers running will result in corrupted database files and no files can be
@@ -303,14 +306,10 @@ snapraid_runner_delete_threshold: -1
 snapraid_runner_use_ssl: true
 
 snapraid_content_files:
-  - /var/snapraid.content
+  - /var/local/snapraid/snapraid.content
+  - /mnt/snapraid-content/disk1/snapraid.content
+  - /mnt/snapraid-content/disk2/snapraid.content
 
-snapraid_config_excludes:
-  - "*.unrecoverable"
-  - /lost+found/
-  - "*.!sync"
-  - /tmp/
-  - /Downloads/*
 
 #
 # SMART error reporting
