--- a/roles/nut/vars/main.yml
+++ b/roles/nut/vars/main.yml
@@ -4,15 +4,13 @@ nut_host: "0.0.0.0"
 nut_user: monitor
 nut_password: "{{ nut_monitor_password }}"
 nut_mode: netserver
-nut_packages:
-  - nut-client
-  - nut-server
 nut_services:
-  - nut-driver
+  - nut-monitor
   - nut-server
+  - nut-driver@epyc-ion
 nut_ups:
   - name: epyc-ion
     driver: usbhid-ups
-    device: /dev/bus/usb/001/003
+    device: auto
     description: Epyc ION UPS
 nut_upsd_extra: LISTEN 0.0.0.0 3493
