--- a/roles/onlyoffice/tasks/network.yml
+++ b/roles/onlyoffice/tasks/network.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create a docker network
   community.docker.docker_network:
-    name: "{{ nextcloud_network_name }}"
+    name: "{{ onlyoffice_network_name }}"
     connected:
       - "{{ swag_container_name }}"
     appends: true
