--- a/roles/telegraf/files/telegraf.conf
+++ b/roles/telegraf/files/telegraf.conf
@@ -47,11 +47,11 @@
   ## Log target controls the destination for logs and can be one of "file",
   ## "stderr" or, on Windows, "eventlog".  When set to "file", the output file
   ## is determined by the "logfile" setting.
-  # logtarget = "file"
+  #  logtarget = "file"
 
   ## Name of the file to be logged to when using the "file" logtarget.  If set to
   ## the empty string then logs are written to stderr.
-  # logfile = ""
+  logfile = "/var/log/telegraf/telegraf.log"
 
   ## The logfile will be rotated after the time interval specified.  When set
   ## to 0 no time based rotation is performed.  Logs are rotated only when
@@ -60,15 +60,15 @@
 
   ## The logfile will be rotated when it becomes larger than the specified
   ## size.  When set to 0 no size based rotation is performed.
-  # logfile_rotation_max_size = "0MB"
+  logfile_rotation_max_size = "10MB"
 
   ## Maximum number of rotated archives to keep, any older logs are deleted.
   ## If set to -1, no archives are removed.
-  # logfile_rotation_max_archives = 5
+  logfile_rotation_max_archives = 5
 
   ## Pick a timezone to use when logging or type 'local' for local time.
   ## Example: America/Chicago
-  # log_with_timezone = ""
+  log_with_timezone = "local"
 
   ## Override default hostname, if empty use os.Hostname()
   hostname = ""
@@ -142,6 +142,7 @@
   # mount_points = ["/"]
   ## Ignore mount points by filesystem type.
   ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
+
 [[inputs.diskio]]
   ## By default, telegraf will gather stats for all devices including
   ## disk partitions.
@@ -310,8 +311,8 @@
   ## A running NUT server to connect to.
   # server = "127.0.0.1"
   # port = 3493
-  username = "monitor"
-  password = "1q2w3e4r"
+  username = "$UPSD_USERNAME"
+  password = "$UPSD_PASSWORD"
 
 # Intel PowerStat plugin enables monitoring of platform metrics (power, TDP)
 # and per-CPU metrics like temperature, power and utilization.
@@ -349,9 +350,7 @@
   servers = ["tcp://127.0.0.1:1883"]
 
   ## Topics that will be subscribed to.
-  topics = [
-    "tele/{{ hostname }}/SENSOR",
-  ]
+  topics = ["$MQTT_TOPIC"]
 
   ## The message topic will be stored in a tag specified by this value.  If set
   ## to the empty string no topic tag will be created.
