--- a/run.yml
+++ b/run.yml
@@ -1,17 +1,14 @@
 ---
 # Tasks and roles for all hosts
 
-# - hosts: catafalco
-#   gather_facts: no
-#   pre_tasks:
-#     - import_tasks: tasks/ssh_juggle_port.yml
-#       tags:
-#         - port
-
 - name: Set SSH correctly before executing other roles
   hosts: catafalco
   gather_facts: false
   pre_tasks:
+#    - name: Juggle with SSH with default and custom port
+#      import_tasks: tasks/ssh_juggle_port.yml
+#      tags:
+#        - port
     - name: Set SSH correctly before executing other roles
       import_tasks: tasks/ssh.yml
       tags:
@@ -79,7 +76,7 @@
         - smartd
       when: enable_nas_stuff | default(False)
 
-    - role: IronicBadger.snapraid
+    - role: snapraid
       become: true
       tags:
         - snapraid
@@ -232,6 +229,13 @@
         - servarr
         - containers
 
+    - role: slskd
+      become: false
+      tags:
+        - slskd
+        - servarr
+        - containers
+
     #
     # Media
     #
@@ -313,4 +317,14 @@
     - role: vaultwarden
       tags:
         - vaultwarden
+        - containers
+
+    - role: dawarich
+      tags:
+        - dawarich
+        - containers
+
+    - role: seafile
+      tags:
+        - seafile
         - containers
